# triton-resnet18

./: Makefile  README.md  benchmark.py  benchmark_v1.0_0717.txt  main.py  pyproject.toml  requirements.txt  simple_benchmark.py  test_installation.py  train_example.py  triton_resnet18.py
