[project]
name = "triton-resnet18"
version = "0.1.0"
description = "ResNet18 implementation using Triton for GPU acceleration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "triton>=2.0.0",
    "numpy>=1.21.0",
    "pillow>=8.0.0",
]
